# ThriftDemo

./: LoggerService.thrift  README.md
gen-cpp/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerClient.cpp  LoggerServer.cpp  LoggerService_constants.cpp  LoggerService_constants.h  LoggerService_types.cpp  LoggerService_types.h  Logger_server.skeleton.cpp
gen-py/: client.py  server.py
gen-py/LoggerPy/: Logger-remote  Logger.py  __init__.py  ttypes.py
thriftpy/: client.py  server.py
